; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/etc/extr_lcc.c_alloc.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/etc/extr_lcc.c_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@alloc.avail = internal global i8* null, align 8
@alloc.limit = internal global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @alloc(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = sext i32 %3 to i64
  %5 = add i64 %4, 8
  %6 = sub i64 %5, 1
  %7 = and i64 %6, -8
  %8 = trunc i64 %7 to i32
  store i32 %8, i32* %2, align 4
  %9 = load i32, i32* %2, align 4
  %10 = sext i32 %9 to i64
  %11 = load i8*, i8** @alloc.limit, align 8
  %12 = load i8*, i8** @alloc.avail, align 8
  %13 = ptrtoint i8* %11 to i64
  %14 = ptrtoint i8* %12 to i64
  %15 = sub i64 %13, %14
  %16 = icmp sge i64 %10, %15
  br i1 %16, label %17, label %29

17:                                               ; preds = %1
  %18 = load i32, i32* %2, align 4
  %19 = add nsw i32 %18, 4096
  %20 = sext i32 %19 to i64
  %21 = call i8* @malloc(i64 %20)
  store i8* %21, i8** @alloc.avail, align 8
  %22 = load i8*, i8** @alloc.avail, align 8
  %23 = call i32 (i8*, ...) bitcast (i32 (...)* @assert to i32 (i8*, ...)*)(i8* %22)
  %24 = load i8*, i8** @alloc.avail, align 8
  %25 = load i32, i32* %2, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i8, i8* %24, i64 %26
  %28 = getelementptr inbounds i8, i8* %27, i64 4096
  store i8* %28, i8** @alloc.limit, align 8
  br label %29

29:                                               ; preds = %17, %1
  %30 = load i32, i32* %2, align 4
  %31 = load i8*, i8** @alloc.avail, align 8
  %32 = sext i32 %30 to i64
  %33 = getelementptr inbounds i8, i8* %31, i64 %32
  store i8* %33, i8** @alloc.avail, align 8
  %34 = load i8*, i8** @alloc.avail, align 8
  %35 = load i32, i32* %2, align 4
  %36 = sext i32 %35 to i64
  %37 = sub i64 0, %36
  %38 = getelementptr inbounds i8, i8* %34, i64 %37
  ret i8* %38
}

declare dso_local i8* @malloc(i64) #1

declare dso_local i32 @assert(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
